
Thu Apr 25 16:38:01 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* rand.c, rand.h: instance method icalls need to have an explicit
	this pointer as first argument in the C implementation.

2002-04-25  Nick Drochak <ndrochak@gol.com>

	* icall.c: Fix typo in map for GetNonZeroBytes

2002-04-24	Patrik Torstensson <patrik.torstensson@labs2.com>

	* string-icalls.c : String does now passes unit tests without any 
	errors, the following changes has been made:
	
	Implemented replace methods.
	Renaming of methods to (try) follow the standard.
	Fixed compare ordinal
	Made all memory allocated directly to function instead of via icall function.
	Small performance fix in is_in_array function
			
 (2002-04-23) Changes from Duncan Mak <duncan@ximian.com>

	c (mono_string_Internal_ctor_charp_int_int):
	(mono_string_Internal_ctor_sbytep_int_int):  Removed check for
	sindex < 0, throw ArgumentOutOfRangeException instead of
	ArgumentNullException.

	Added new check for length == 0, however
	I need to make it return String.Empty from the C code.
	
	(mono_string_Internal_ctor_sbytep): Use mono_string_new, and let
	that calculate the length for us here.
	
	(mono_string_Internal_ctor_sbytep_int_int): Replaced
	mono_string_new_utf16 with mono_string_new, since value is utf8.

Wed Apr 24 18:43:29 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* object.c: register the object for finalization if needed.
	Allocate one more char in the string for the terminating 0 char.

Wed Apr 24 18:22:27 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c, class.h, image.c: check if a type implemenst a destructor.
	Use the proper key for array class lookups.
	* icall.c: register the icalls in the System.GC class.
	* gc.c, gc.h: GC-related functions and icalls.

2002-04-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c:
	* socket-io.c:
	* unicode.c: free some strings gotten from mono_string_to_utf8 and
	changed a couple of free () by g_free ().
